Model added, Index.html updated.

--- a/Cowsay/Homepage/templates/idex.html
+++ b/Cowsay/Homepage/templates/idex.html
@@ -1,21 +1,11 @@
-<h1>What does the cow say??</h1>
+{% if message %}
+    <h1>{{ message }}</h1>
+{% endif %}
 
-<!-- <h4>
-  <a href="WhatHasTheCowSaid/">What has the cow said?</a> 
-</h4> -->
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit!">
+</form>
 
-<ul>
-  {% for recipe in recipes %}
-  <li>
-      <!-- <strong>
-          <a href="/recipes/{{ recipe.id }}">
-            {{recipe.title}}
-        </a>
-      </strong>
-      <a href="/author/{{ recipe.author.id }}">
-        - Written by {{recipe.author.name}}
-      </a> -->
-      
-  </li>
-  {% endfor %}
-</ul>
+<p><pre>{{ moo }}</pre></p>
